# Otium_wip

./: .gitignore  .mise.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  IMPROVEMENT_PLAN.md  LICENSE  MANUAL_STARTUP.md  OPTIMIZATION_GUIDE.md  QUICK_START.md  README.md  README.md.backup  Risk_Assessment.md  check_unicode.py  netlify.toml  render.yaml  test_api_format_fix.py  test_api_response_mismatch.py  test_frontend_flow.py  test_frontend_polling.py  test_request.py  verify_fixes.py  文献调研问题诊断报告.md
.claude/: settings.local.json
backend/: .env.example  .flake8  .gitignore  CLAUDE.md  DATABASE_MIGRATION_README.md  FINAL_CONFIGURATION_SUMMARY.md  MIGRATION_CHECKLIST.md  MIGRATION_SUMMARY.md  QUICK_START_MIGRATION.md  __init__.py  alembic.ini  api_services.py  background_task_service.py  config.py  exceptions.py  final_system_test.py  get_admin_token.py  init_db.py  main.py  main.py.backup  print_routes.py  prompt_cache.py  prompt_monitor.py  prompt_templates.py  prompts.py  prompts_backup.py  pyproject.toml  pytest.ini  requirements.txt  requirements.txt.backup  restart_server.py  run_system_test.py  schemas.py  services.py  simple_test.py  start_backend.bat.backup  start_backend.ps1  start_backend.ps1.backup  start_backend_fixed.bat  start_worker.bat  (+27 more)
backend/.claude/: settings.local.json
backend/data/: otium.db.backup
backend/docs/: FINAL_CONFIGURATION_SUMMARY.md  SMTP_FIX_CHECKLIST.md  translation_test_results.json
backend/migrations/: env.py
backend/migrations/versions/: af7f0ba9b1a8_add_background_tasks_table.py  ecd2cc2e9e99_add_email_field_to_users_table.py
backend/models/: __init__.py  database.py
backend/scripts/: final_system_test.py  fix_code_quality.py  install_dependencies.py  migrate_to_database.py  print_routes.py  rollback_migration.py  run_quality_checks.py  run_system_test.py  test_migration.py  verify_final_config.py
backend/services/: __init__.py  email_service.py  verification_service.py
backend/tests/: __init__.py  conftest.py  test_backend.py  test_config.py  test_deployment_config.py  test_exceptions.py  test_gemini.py  test_health.py  test_prompt_optimization.py  test_schemas.py  test_utils.py
backend/user_services/: __init__.py  user_service.py
data/: otium.db
(+128 files in other folders)
